Ticket information and others information support

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -17,6 +17,21 @@ zh-TW:
       personal: 單人購票方案。
     early_bird: 早鳥票
     buy_now: 立即購票
+    info:
+      student:
+        origin_price: 原始票價為 NTD $%{price}
+        early_bird_price: 到 %{date}前早鳥票為 NTD $%{price}
+        others:
+          - 其他說明
+          - 其他說明
+      group:
+        origin_price: 原始票價為 NTD $%{price}
+        early_bird_price: 到 %{date}前早鳥票為 NTD $%{price}
+        others:
+      personal:
+        origin_price: 原始票價為 NTD $%{price}
+        early_bird_price: 到 %{date}前早鳥票為 NTD $%{price}
+        others:
   locale:
     name:
       zh-TW: 繁體中文
