Add agenda display for speaker

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,6 +58,8 @@ en:
     index:
       title: Speakers
       speakers: Speakers
+    show:
+      sessions_by: "Sessions by %{speaker}"
   admin_users:
     sessions:
       new:
