--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,31 @@
+---
 en:
-  site_name: Taipei Game Developers Forum
-  site_introduce:
-    >
-      <p>English introduction</p>
-      <p>(To be added.)</p>
+  site_name: "Taipei Game Developers Forum"
+  site_introduce: "<p>2017 年即將邁入第六屆的台北遊戲開發者論壇（TGDF，Taipei Game Developers Forum），為台灣最大型之年度專業遊戲論壇活動，每年吸引近千名海內外開發者共襄盛舉參加。</p> <p>此活動曾經邀請過重量級遊戲開發講人士如「洛克人之父」稻船敬二、「紀念碑谷」製作人 Neil Mcfarland、VR 遊戲公司「Owlchemy Labs」創辦人 Alex Schwartz 等，亦有大量海內外深度遊戲設計、程式、美術專題講座與課程。自 2015 年起 TGDF 更加入 VR 體驗區、「TGDF Indie Space 獨立遊戲空間」展示區、以及商談媒合服務等。</p> <p>今年 TGDF 預計將邀請擔任《Sega Rally》、《Rez》、《伊甸之子》及《Rez Infinite》的名製作人水口哲也、《世界二》OXON 執行長王樑華等人帶來精采分享外，更有《Voez》雷亞遊戲、《不思議迷宮》廈門青瓷數碼等海內外講師蒞臨演講。</p> <p>在專業演講之外，本屆的 TGDF Indie Space 更將擴大規模，將開放給來自國內報名與海外邀請共五十餘組的獨立遊戲團隊進行展示，為遊戲開發同好提供一個公開的交流展示平台。此外，本屆亦增設商務媒合區，HR 人才招募區、VR 展示區等，希望以更多元的體驗內容，讓遊戲開發者滿載而歸。</p>\n"
   ticket:
     type:
-      student: Student Pass
-      group: Group Pass
-      personal: Individual Pass
+      student: "Student Pass"
+      group: "Group Pass"
+      personal: "Individual Pass"
     description:
-      student: Relevant student ID checking on-site required.
-      group: Any group with at least 2 people is eligible.
-      personal: Access to all sessions for one person.
-    early_bird: Early Bird
+      student: "Relevant student ID checking on-site required."
+      group: "Any group with at least 2 people is eligible."
+      personal: "Access to all sessions for one person."
+    early_bird: "Early Bird"
     buy_now: Register
     info:
       student:
-        origin_price: Full price NTD $%{price}
-        early_bird_price: Early Bird period ends on %{date}
-        others:
+        origin_price: "Full price NTD $%{price}"
+        early_bird_price: "Early Bird period ends on %{date}"
+        others: ~
       group:
-        origin_price: Full price NTD $%{price}
-        early_bird_price: Early Bird period ends on %{date}
-        others:
+        origin_price: "Full price NTD $%{price}"
+        early_bird_price: "Early Bird period ends on %{date}"
+        others: ~
       personal:
-        origin_price: Full price NTD $%{price}
-        early_bird_price: Early Bird period ends on %{date}
-        others:
+        origin_price: "Full price NTD $%{price}"
+        early_bird_price: "Early Bird period ends on %{date}"
+        others: ~
   locale:
     name:
       zh-TW: 繁體中文
@@ -37,23 +35,24 @@ en:
       home: Home
       news: News
       speakers: Speakers
+      agenda: Agenda
       buy_ticket: Register
   pages:
     index:
       about:
-        know: About <span>%{site_name}</span>
+        know: "About <span>%{site_name}</span>"
       news:
-        latest_news: Latest news
-        read_more: Learn more
+        latest_news: 最新<span>消息</span>
+        read_more: "Learn more"
       ticket:
-        get_tickets: Passes & Prices
+        get_tickets: "Passes & Prices"
   news:
     index:
       title: News
     show:
       latest_news: News
     news:
-      read_more: Learn more
+      read_more: "Learn more"
   speakers:
     index:
       title: Speakers
@@ -63,4 +62,4 @@ en:
   admin_users:
     sessions:
       new:
-        hint: Sign in to start your session
+        hint: "Sign in to start your session"
