--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -38,6 +38,7 @@ zh-TW:
       agenda: 議程
       sponsors: 合作夥伴
       buy_ticket: 購票
+      indie_spaces: 獨立遊戲展
   pages:
     index:
       about:
