Implement partner section in homepage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,6 +48,8 @@ en:
         read_more: "Learn more"
       ticket:
         heading: "<span>Passes</span> & Prices"
+      partner:
+        heading: Partner
   news:
     index:
       title: News
