--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,7 +54,7 @@ en:
     index:
       title: News
     show:
-      latest_news: News
+      latest_news: Latest News
     news:
       read_more: "Learn more"
   speakers:
