Closed #190, Add buy ticket on navbar

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -37,7 +37,7 @@ zh-TW:
       speakers: 講者
       agenda: 議程
       sponsors: 合作夥伴
-      buy_ticket: 購票
+      buy_ticket: 立即購票
       indie_spaces: 獨立遊戲空間
   pages:
     index:
