Closed #200, CFP mode change navbar agenda text

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -35,7 +35,8 @@ zh-TW:
       home: 首頁
       news: 新聞
       speakers: 講者
-      agenda: 議程
+      agenda: 議程表
+      cfp: 講題徵集
       sponsors: 合作夥伴
       buy_ticket: 立即購票
       indie_spaces: 獨立遊戲空間
