--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
       news: News
       speakers: Speakers
       agenda: Agenda
+      cfp: CFP
       sponsors: Partners
       buy_ticket: Register
       indie_spaces: "Indie Space"
