--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -64,6 +64,12 @@ zh-TW:
       speakers: 講者列表
     show:
       sessions_by: "%{speaker}的議程"
+      synchornize: 同步翻譯為%{to}
+      sentence: 逐句翻譯為%{to}
+      lang:
+        zh: 中文
+        en: 英文
+        ja: 日文
   sponsors:
     index:
       title: 合作夥伴
