Add CoC to navigation

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -40,6 +40,7 @@ zh-TW:
       sponsors: 合作夥伴
       buy_ticket: 立即購票
       indie_spaces: 獨立遊戲空間
+      code_of_conduct: 活動守則
   pages:
     index:
       about:
