--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,7 +81,7 @@ en:
       sessions_by: "Sessions by %{speaker}"
       synchornize: " (simultaneously interpreted into %{to})"
       sentence: " (consecutively interpreted into %{to})"
-      subtitle: " (%{to} subtitle)"
+      subtitle: " (accompanied with %{to} subtitles.)"
       lang:
         zh: Mandarin/Chinese
         en: English
