--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -34,8 +34,8 @@ zh-TW:
       title: 議程軌二
       description: 請由此前往 TGDF_Official2 Twitch 頻道，收看第二軌議程
     track_3:
-      title: 活動軌
-      description: 活動內容規劃中
+      title: 事前登錄
+      description: 參與 2020 TGDF 事前登錄，並於活動後回答抽獎問卷，可額外獲得下屆活動折扣碼！（籌備中）
     watch_now: 前往參與
   locale:
     name:
