Revert "locale wording fix"

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -80,13 +80,13 @@ zh-TW:
       speakers: 講者列表
     show:
       sessions_by: "%{speaker}的議程"
-      synchornize: 同步口譯為%{to}
-      sentence: 逐句口譯為%{to}
-      subtitle: 附帶%{to}字幕
+      synchornize: 同步翻譯為%{to}
+      sentence: 逐句翻譯為%{to}
+      subtitle: 演講附帶%{to}字幕
       lang:
-        zh: 中文演講
-        en: 英文演講
-        ja: 日文演講
+        zh: 中文
+        en: 英文
+        ja: 日文
   agendas:
     show:
       title: 議程表
