Add language label to speaker page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,6 +83,7 @@ en:
       synchornize: " (simultaneously interpreted into %{to})"
       sentence: " (consecutively interpreted into %{to})"
       subtitle: " (accompanied with %{to} subtitles.)"
+      language: "Language: "
       lang:
         zh: Mandarin/Chinese
         en: English
