--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -83,6 +83,7 @@ zh-TW:
       synchornize: 同步翻譯為%{to}
       sentence: 逐句翻譯為%{to}
       subtitle: 演講附帶%{to}字幕
+      language: 語言：
       lang:
         zh: 中文
         en: 英文
