--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,6 +51,7 @@ en:
       sponsors: Partners
       buy_ticket: Register
       watch_now: Watch Now
+      pre_register: Pre-Register
       indie_spaces: "Indie Space"
       code_of_conduct: CoC
   pages:
