--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -51,6 +51,7 @@ zh-TW:
       sponsors: 合作夥伴
       buy_ticket: 立即購票
       watch_now: 前往參與
+      pre_register: 事前登錄
       indie_spaces: 獨立遊戲空間
       code_of_conduct: 活動守則
   pages:
