Add survey feature

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -54,6 +54,7 @@ zh-TW:
       pre_register: 事前登錄
       indie_spaces: 獨立遊戲空間
       code_of_conduct: 活動守則
+      survey: 會後問卷
   pages:
     index:
       about:
