change survey CTA desc

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
       description: This will direct you to TGDF_Official2 Twitch channel for Track 2 sessions.
     track_3:
       title: Pre-Register
-      description: Pre-register now and answer the post-event survey to get 2021 TGDF coupon in addition to the survey raffle!
+      description: Pre-register now and answer the post-event survey to join our raffle for prizes!
     watch_now: Go Now
   locale:
     name:
