adding night_market formal button name to locale-en ... haven't decided zh-TW name, so only en for now.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,7 @@ en:
       watch_now: Watch Now
       pre_register: Pre-Register
       indie_spaces: "Indie Space"
+      night_market: "Nightmarket Festival"
       code_of_conduct: CoC
   pages:
     index:
