--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -53,6 +53,7 @@ zh-TW:
       watch_now: 前往參與
       pre_register: 事前登錄
       indie_spaces: 獨立遊戲空間
+      night_market: 遊戲夜市
       code_of_conduct: 活動守則
       survey: 會後問卷
   pages:
