--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -35,7 +35,7 @@ zh-TW:
       description: 請由此前往 TGDF_Official2 Twitch 頻道，收看第二軌議程
     track_3:
       title: 事前登錄
-      description: 參與 2021 TGDF 事前登錄，並於活動後回答問卷，獲得抽獎機會！
+      description: 參與本論壇事前登錄，並於活動後回答問卷，獲得抽獎機會！
     watch_now: 前往參與
   locale:
     name:
