--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,7 +63,7 @@ en:
         heading: "<span>What's</span> New"
         read_more: "Learn more"
       ticket:
-        heading: "<span>Passes</span> & Prices"
+        heading: '<span class="text-red-500">Passes</span> & Prices'
       streaming:
         heading: "<span>Live</span> Streaming"
       partner:
