--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -61,7 +61,7 @@ zh-TW:
       about:
         heading: 了解<span class="text-red-500">台北遊戲開發者論壇</span>
       news:
-        heading: <span>最新</span>消息
+        heading: 最新<span class="text-red-500">消息</span>
         read_more: 了解更多
       ticket:
         heading: <span class="text-red-500">購票</span>與售價
