Fix incorrect locale

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -89,7 +89,7 @@ en:
       lang:
         zh: Mandarin/Chinese
         en: English
-        ja: Japanese
+        jp: Japanese
   agendas:
     show:
       title: Agenda
